--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,7 @@
 <%= javascript_pack_tag 'application' %>
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+
+
+<h1>Try out graphQL with 30k fake providers</h1>
+<a href="https://r5-graphql-react.herokuapp.com/graphical">Click me to try our GraphQL</a>
+
+<i>iansanity</i>
