graphiql link typo

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,7 +2,7 @@
 
 
 <h1>Try out graphQL with 30k fake providers</h1>
-<a href="https://r5-graphql-react.herokuapp.com/graphical">Click me to try our GraphQL</a>
+<a href="https://r5-graphql-react.herokuapp.com/graphiql">Click me to try our GraphQL</a>
 <p>https://github.com/iankhor/rails-graphsql-react</p>
 <i>iansanity</i>
 
